* Added image carousel with stock images * Added prorpietary colors

--- a/src/App.css
+++ b/src/App.css
@@ -217,3 +217,9 @@ form > div {
     transform: rotate(360deg);
   }
 }
+
+.carousel-img {
+  object-fit: cover;
+  object-position: center;
+  max-height: "500px";
+}
